# CrewAI

./: export.py  format_txt.py  output.md  output.txt  output_after_extraction.txt  prompt.txt  pyproject.toml  tempCodeRunnerFile.py  test.py
db/: chroma.sqlite3
src/financial_analyst_crew/: crew.py  main.py
src/financial_analyst_crew/config/: agents.yaml  tasks.yaml
src/financial_analyst_crew/tools/: sec_tools.py
